--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 Dados/*.csv filter=lfs diff=lfs merge=lfs -text
 resultados_versao_NP/*.csv filter=lfs diff=lfs merge=lfs -text
+resultados_versao_P/Consolidado.csv filter=lfs diff=lfs merge=lfs -text
