Corrigir regra de rastreamento LFS para ficheiros em resultados_versao_P

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@ resultados_versao_NP/*.csv filter=lfs diff=lfs merge=lfs -text
 resultados_versao_P filter=lfs diff=lfs merge=lfs -text
 resultados_versao_P/Consolidado.csv filter=lfs diff=lfs merge=lfs -text
 resultados_versao_P/* filter=lfs diff=lfs merge=lfs -text
+resultados_versao_NP/* filter=lfs diff=lfs merge=lfs -text
